--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
                         We help brands and business increase growth,focus,sales and creativity.  
                      </h1>
                      <p class="zup" data-aos="fade-in" data-aos-delay="500">
-                        Hey. do you know you can leave your Tech worries for us and Focus on core aspect of your bussiness.
+                        Hey, do you know you can leave your Tech worries for us and Focus on core aspect of your business.
                      </p>
                   
                      <div class="btn-sets2 vcenter  mt20" data-aos="fade-in" data-aos-delay="1100">
@@ -264,7 +264,7 @@
                      <div class="ree-card-img"><img src="images/icons/apple-logo.png" alt="services"> </div>
                      <div class="ree-card-content mt40">
                         <h3 class="mb15"><a href="#">iOS Development</a></h3>
-                        <p>At Venbrino Agency, we offer pixel perfect responsive website design services which are built around aesthetics and usability.</p>
+                        <p>At Venbrino Agency, we offer pixel perfect mobile app services which are built around aesthetics and usability.</p>
                      </div>
                      <!-- <div class="ree-card-content-link">
                         <a href="#" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
@@ -290,7 +290,7 @@
                      <div class="ree-card-img"><img src="images/icons/smartwatch.svg" alt="services"> </div>
                      <div class="ree-card-content mt40">
                         <h3 class="mb15"><a href="#">Wearable Development</a></h3>
-                        <p>Increase conversions. Increase leads. Increase sales. Increase revenue. That's digital marketing services from Venbrino agency.</p>
+                        <p>Our software house has been recognised by google for outstanding android application quality.</p>
                      </div>
                      <!-- <div class="ree-card-content-link">
                         <a href="#" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
@@ -316,7 +316,7 @@
                      <div class="ree-card-img"><img src="images/icons/app-development.svg" alt="services"> </div>
                      <div class="ree-card-content mt40">
                         <h3 class="mb15"><a href="#">Web App Development</a></h3>
-                        <p>Our highly experienced designers comprehend your vision and business objectives in order to create the designs.</p>
+                        <p>At Venbrino Agency, we offer pixel perfect responsive website design services which are built around aesthetics and usability.</p>
                      </div>
                      <!-- <div class="ree-card-content-link">
                         <a href="#" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
@@ -645,7 +645,7 @@
             <div class="row">
                <div class="col-lg-6 vcenter">
                   <div class="sec-heading our-app-d">
-                     <span class="sub-heading mb15">Download Our App</span>
+                     <span class="sub-heading mb15">Download App</span>
                      <h2 class="mb15">We Are Partners With <span class="ree-text rt40">Top</span> <span class="ree-text rt40">Ventures</span></h2>
                      <!-- <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.</p> -->
                      <div class="btn-sets mt40">
@@ -726,18 +726,26 @@
                   <div class="home-contact-block">
                      <div class="contact-infos">
                         <div class="c-infot">
-                           <span>Sales Department</span> <a href="tel:+2349066269233"><i class="fas fa-phone-alt"></i> +234 906 626 9233</a>
+                           <span>Sales Department</span> <a href="tel:+2349066269233">
+                              <!-- <i class="fas fa-phone-alt"></i>  -->
+                              +234 906 626 9233</a>
                         </div>
                         <div class="c-infot">
-                           <span>HR Department</span> <a href="tel:+2349066269233"><i class="fas fa-phone-alt"></i> +234 906 626 9233</a>
+                           <span>HR Department</span> <a href="tel:+2349066269233">
+                              <!-- <i class="fas fa-phone-alt"></i>  -->
+                              +234 906 626 9233</a>
                         </div>
                      </div>
                      <div class="contact-infos mt35">
                         <div class="c-infot">
-                           <span>Sales Department</span> <a href="mailto:hello@venbrinoDevs.com" class="overflow-hidden"><i class="fas fa-envelope"></i> hello@venbrinoDevs.com</a>
+                           <span>Sales Department</span> <a href="mailto:hello@venbrinoDevs.com" class="overflow-hidden">
+                              <!-- <i class="fas fa-envelope"></i>  -->
+                              hello@venbrinoDevs.com</a>
                         </div>
                         <div class="c-infot">
-                           <span>Connect with Support</span> <a href="mailto:support@venbrinoDevs.com" class="overflow-hidden"><i class="fab fa-skype"></i> support@venbrinoDevs.com</a>
+                           <span>Connect with Support</span> <a href="mailto:support@venbrinoDevs.com" class="overflow-hidden">
+                              <!-- <i class="fab fa-skype"></i>  -->
+                              support@venbrinoDevs.com</a>
                         </div>
                      </div>
                      <!-- <div class="live-review- mt60">
@@ -756,7 +764,7 @@
                         <div class="form-head">
                            <h3>Please fill in the form below.</h3>
                            <p id="feedback-form-error" class="text-danger fw-light"></p>
-                           <p id="feedback-form-success" class="text-success fw-light"></p>
+                           <p id="feedback-form-success" class="text-success fwF-light"></p>
                         </div>
                         <div class="form-body">
                            <form id="feedback-form" name="feedback-form">
