upated venbrino devs header text

--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,8 @@
                         We help brands and business increase growth,focus,sales and creativity.  
                      </h1>
                      <p class="zup" data-aos="fade-in" data-aos-delay="500">
-                        Hey, do you know you can leave your Tech worries for us and Focus on core aspect of your business.
+                        Wow 😮 Do you know that you don't need an employee or freelancer to build and manage your software? <br>
+                        At venbrino dev, we offer a subscription service to help you build your software, 0 employees, 0 freelancers 0 agencies, pause when you like 😁
                      </p>
                   
                      <div class="btn-sets2 vcenter  mt20" data-aos="fade-in" data-aos-delay="1100">
