--- a/public/index.html
+++ b/public/index.html
@@ -117,11 +117,11 @@
                   <div class="hero-content-a">
                      <div class="shape-dot-bg"><img src="images/shape/svg_dot.svg" alt="shape"></div>
                      <h1 class="mb30 zup" data-aos="fade-in" data-aos-delay="200">
-                        We help brands and business increase growth,focus,sales and creativity.  
+                        Easily build and manage your software with our subscription service.
                      </h1>
                      <p class="zup" data-aos="fade-in" data-aos-delay="500">
-                        Wow 😮 Do you know that you don't need an employee or freelancer to build and manage your software? <br>
-                        At venbrino dev, we offer a subscription service to help you build your software, 0 employees, 0 freelancers 0 agencies, pause when you like 😁
+                        
+                        We provide a subscription service at Venbrino Dev that assists you in creating and controlling your software.The best part is, you won't have to worry about hiring any employees, freelancers, or agencies, and you only pay for what you use.
                      </p>
                   
                      <div class="btn-sets2 vcenter  mt20" data-aos="fade-in" data-aos-delay="1100">
@@ -129,7 +129,7 @@
                         <div class="media vcenter mt20">
                            <div class="ree-icon-set img-round80"><img src="images/users/portrait4.png" alt="img" class="img-fluid"></div>
                            <div class="ree-details-set user-info">
-                              <h5>Ifeanyi Precious</h5>
+                              <h5>Precious</h5>
                               <p>Business Head</p>
                            </div>
                         </div>
@@ -885,7 +885,7 @@
 										<a href="#"> <img src="images/footer-logo.png" alt="reeven" class="img w-100"> </a>
 									</div>
 								</div>
-                        <p class="mt15">Overall client rating is 4.9 out of 8,500 Clients for VenbrinoDevs</p>
+                        <p class="mt15">Overall client rating is 4.9 out of 50 Clients for VenbrinoDevs</p>
 
                         <ul class="footer_social mt30">
                            <li><a href="https://twitter.com/venbrinoDevs" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
@@ -954,7 +954,7 @@
                   </div>
                   <div class="col-lg-7">
                      <div class="ft-copyright ft-r">
-                        <p>© 2021-2022. All Rights Reserved </p>
+                        <p>© 2021-2023. All Rights Reserved </p>
                      </div>
                   </div>
                </div>
