--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
                   <div class="hero-content-a">
                      <div class="shape-dot-bg"><img src="images/shape/svg_dot.svg" alt="shape"></div>
                      <h1 class="mb30 zup" data-aos="fade-in" data-aos-delay="200">
-                        Easily build and manage your software with our subscription service.
+                        We build and manage your software with our subscription service.
                      </h1>
                      <p class="zup" data-aos="fade-in" data-aos-delay="500">
                         
@@ -926,9 +926,9 @@
                         <li><a href="javascript:void(0)">Hire Dedicated Developers</a></li>
                         <li><a href="javascript:void(0)">Web App Development</a></li>
                         <li><a href="javascript:void(0)">Mobile App Development</a></li>
-                        <li><a href="javascript:void(0)">Search Engine Optimization</a></li>
-                        <li><a href="javascript:void(0)">Pay-Per-Click</a></li>
-                        <li><a href="javascript:void(0)">Social Media Marketing</a></li>
+                        <li><a href="javascript:void(0)">SDK Development and Maintenance</a></li>
+                        <li><a href="javascript:void(0)">Web3 Softwares</a></li>
+                        <li><a href="javascript:void(0)">Enterprise Softwares</a></li>
                      </ul>
                   </div>
                   <div class="col-5s">
